public/css/main.css
.rows {
    margin-top: 85px;
}

/*---Navigation Bar---*/
.navbar-fixed-top {
    padding: 25px 0;
    -webkit-transition: padding .3s;
    -moz-transition: padding .3s;
    transition: padding .3s;
}

.navbar-fixed-top .navbar-brand {
    font-size: 2em;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

.navbar-fixed-top.navbar-shrink {
    padding: 10px 0;
}

.navbar-fixed-top.navbar-shrink .navbar-brand {
    font-size: 1.5em;
}

.navbar-default {
    background-color: rgba(0, 0, 0, 0.6);
    border-color: transparent;
}

.navbar-default .navbar-brand, 
.navbar-default .navbar-nav > li > a {
    color: #fff;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
	color: #fff;
}

.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
  color: #ffffff;
  background-color: #000;
  border-radius: 4px;
}

.navbar {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}

.navbar a:focus {
    outline: 0;
}

.navbar .navbar-nav {
    letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.navbar-default,
.navbar-inverse {
    border: 0;
}

/*---X animation on mobile menu---*/
.navbar-default .navbar-toggle .icon-bar {
    background-color: #FFFFFF;
}

.navbar-toggle {
    border: none;
    background: transparent !important;
}

.navbar-toggle .icon-bar {
    width: 22px;
    transition: all 0.2s;
}

.navbar-toggle .top-bar {
    -webkit-transform: rotate(45deg);
    -webkit-transform-origin: 10% 10%;
    transform: rotate(45deg);
    transform-origin: 10% 10%;
    -ms-transform: rotate(45deg);
    -ms-transform-origin: 10% 10%;
}

.navbar-toggle .middle-bar {
    opacity: 0;
}

.navbar-toggle .bottom-bar {
    -webkit-transform: rotate(-45deg);
    -webkit-transform-origin: 10% 90%;
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
    -ms-transform: rotate(-45deg);
    -ms-transform-origin: 10% 90%;
}

.navbar-toggle.collapsed .top-bar {
    -webkit-transform: rotate(0);
    transform: rotate(0);
    -ms-transform: rotate(0);
}

.navbar-toggle.collapsed .middle-bar {
    opacity: 1;
}

.navbar-toggle.collapsed .bottom-bar {
    -webkit-transform: rotate(0);
    transform: rotate(0);
    -ms-transform: rotate(0);
}

.modal-backdrop {
    z-index: 1020;
}

.modal-body {
    text-transform: capitalize;
}

.alert {
    margin-top: 75px;
}

